<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navSection"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <!-- Home Section -->
    <LinearLayout
        android:id="@+id/homeSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:padding="@dimen/padding_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/productosSection"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iconHome"
            android:layout_width="@dimen/icon_nav"
            android:layout_height="@dimen/icon_nav"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/nav_home"
            android:layout_marginBottom="@dimen/margin_small"/>

        <TextView
            android:id="@+id/textHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_home"
            android:textSize="@dimen/text_medium"
            android:textColor="?android:textColorPrimary"
            android:gravity="center" />
    </LinearLayout>

    <!-- Productos Section -->
    <LinearLayout
        android:id="@+id/productosSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:padding="@dimen/padding_small"
        app:layout_constraintStart_toEndOf="@id/homeSection"
        app:layout_constraintEnd_toStartOf="@id/disenarSection"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iconProductos"
            android:layout_width="@dimen/icon_nav"
            android:layout_height="@dimen/icon_nav"
            android:src="@drawable/ic_productos"
            android:contentDescription="@string/nav_productos"
            android:layout_marginBottom="@dimen/margin_small"/>

        <TextView
            android:id="@+id/textProductos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_productos"
            android:textSize="@dimen/text_medium"
            android:textColor="?android:textColorPrimary"
            android:gravity="center" />
    </LinearLayout>

    <!-- Diseñar Section -->
    <LinearLayout
        android:id="@+id/disenarSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:padding="@dimen/padding_small"
        app:layout_constraintStart_toEndOf="@id/productosSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/iconDisenar"
            android:layout_width="@dimen/icon_nav"
            android:layout_height="@dimen/icon_nav"
            android:src="@drawable/ic_estilo"
            android:contentDescription="@string/nav_disenar"
            android:layout_marginBottom="@dimen/margin_small"/>

        <TextView
            android:id="@+id/textDisenar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_disenar"
            android:textSize="@dimen/text_medium"
            android:textColor="?android:textColorPrimary"
            android:gravity="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
